Ajuste pantalla productos con base a API

--- a/backend/public/assts/css/style.css
+++ b/backend/public/assts/css/style.css
@@ -139,7 +139,7 @@ header{
 
 
 /* Main */
-.container-items{
+#container-items{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
