--- a/backend/public/component/store/store.html
+++ b/backend/public/component/store/store.html
@@ -9,6 +9,7 @@
     />
     <title>Tienda</title>
 	<link rel="stylesheet" href="../assts/css/style.css" />
+    <script src="../assts/js/store/script.js"></script>
 </head>
 <body>
     <header>
@@ -62,34 +63,8 @@
             </div>
         </div>
 	</header>
-    <div class="container-items">
-        <div class="item">
-            <figure>
-                <img
-                    src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-                    alt="producto"
-                />
-            </figure>
-            <div class="info-product">
-                <h2>Zapatos Nike</h2>
-                <p class="price">$80</p>
-                <button>Añadir al carrito</button>
-            </div>
-        </div>
-        <div class="item">
-            <figure>
-                <img
-                    src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-                    alt="producto"
-                />
-            </figure>
-            <div class="info-product">
-                <h2>Audifonos</h2>
-                <p class="price">$20</p>
-                <button>Añadir al carrito</button>
-            </div>
-        </div>
-        <div class="item">
+    <div id="container-items">
+        <!-- <div class="item">
             <figure>
                 <img
                     src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1099&q=80"
@@ -101,33 +76,7 @@
                 <p class="price">$50</p>
                 <button>Añadir al carrito</button>
             </div>
-        </div>
-        <div class="item">
-            <figure>
-                <img
-                    src="https://images.unsplash.com/photo-1546868871-7041f2a55e12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-                    alt="producto"
-                />
-            </figure>
-            <div class="info-product">
-                <h2>Smartwatch</h2>
-                <p class="price">$90</p>
-                <button>Añadir al carrito</button>
-            </div>
-        </div>
-        <div class="item">
-            <figure>
-                <img
-                    src="https://images.unsplash.com/photo-1585386959984-a4155224a1ad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"
-                    alt="producto"
-                />
-            </figure>
-            <div class="info-product">
-                <h2>Perfume</h2>
-                <p class="price">$50</p>
-                <button>Añadir al carrito</button>
-            </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
