--- a/backend/public/component/store/new_product.html
+++ b/backend/public/component/store/new_product.html
@@ -21,8 +21,11 @@
 
         <label for="productImageURL">URL de la Imagen:</label>
         <input type="url" id="productImageURL" name="img" required>
+        
+        <label for="productCategory">Categoría:</label>
+        <select id="productCategory" name="catalog_product" required></select>
 
-        <button type="submit">Guardar Producto</button>
+        <button type="submit">Guardar Productos</button>
     </form>
 </body>
 </html>
