--- a/backend/public/component/store/new_product.html
+++ b/backend/public/component/store/new_product.html
@@ -5,27 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../assts/js/store/new_product.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Formulario para Guardar Producto</h1>
-
-    <form id="productForm">
-        <label for="productName">Nombre:</label>
-        <input type="text" id="productName" name="name" required>
-
-        <label for="productPrice">Precio:</label>
-        <input type="number" id="productPrice" name="price" required>
-
-        <label for="productDescription">Descripción:</label>
-        <textarea id="productDescription" name="describe_product" required></textarea>
-
-        <label for="productImageURL">URL de la Imagen:</label>
-        <input type="url" id="productImageURL" name="img" required>
-        
-        <label for="productCategory">Categoría:</label>
-        <select id="productCategory" name="catalog_product" required></select>
-
-        <button type="submit">Guardar Productos</button>
-    </form>
+    <div class="container">
+        <h1>Formulario para Guardar Producto</h1>        
+        <form id="productForm">
+            <div class="mb-3">
+                <label for="productName" class="form-label">Nombre:</label>
+                <input class="form-control" type="text" id="productName" name="name" required>
+            </div>
+            <div class="mb-3">    
+                    <label for="productPrice" class="form-label">Precio:</label>
+                    <input class="form-control" type="number" id="productPrice" name="price" required>
+            </div>
+            <div class="mb-3">
+                <label for="productDescription" class="form-label">Descripción:</label>
+                <textarea id="productDescription" class="form-control" rows="3" name="describe_product" required></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="productImageURL" class="form-label">URL de la Imagen:</label>
+                <input type="url" id="productImageURL" name="img" class="form-control" required>
+            </div>
+            <div class="mb-3">        
+                <label for="productCategory" class="form-label">Categoría:</label>
+                <select class="form-select form-select-lg mb-3" aria-label="Default select example" id="productCategory" name="catalog_product" required></select>
+            </div>
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <button class="btn btn-primary" type="submit">Guardar Productos</button>
+            </div>
+        </form>
+    </div>
+    
 </body>
 </html>
