--- a/backend/public/component/store/store.html
+++ b/backend/public/component/store/store.html
@@ -9,13 +9,13 @@
     />
     <title>Tienda</title>
 	<link rel="stylesheet" href="../assts/css/style.css" />
-    <script src="../assts/js/store/script.js"></script>
+    <script src="../assts/js/store/store.js"></script>
     <!-- CDN Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container text-center">
+    <div class="container">
         <header>
             <h1>Tienda</h1>
             <div class="container-icon">
@@ -67,7 +67,7 @@
             </div>
         </header>
     
-        <div id="container-items">
+        <div id="container-items"  class="container text-center">
             <div class="row">
                 
             </div>
