Pantalla login mejorado

--- a/backend/public/component/login/login.html
+++ b/backend/public/component/login/login.html
@@ -29,6 +29,10 @@
             </div>-->
             <button type="submit" class="btn btn-primary">INICIAR SESIÓN</button>
         </form>
+        <br>
+        <!-- <div class="alert alert-danger" role="alert"> 
+            A simple warning alert—check it out!
+        </div> -->
     </div>
 </body>
 </html>
