--- a/backend/public/component/store/store.html
+++ b/backend/public/component/store/store.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <!-- <header>
             <h1>Tienda</h1>
             <div class="container-icon">
                 <svg
@@ -65,12 +65,33 @@
                     </div>
                 </div>
             </div>
-        </header>
-    
-        <div id="container-items"  class="container text-center">
-            <div class="row">
-                
+        </header> -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">[TITULO WEB SITE]</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse hstack gap-3" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- <li><a class="dropdown-item" href="#">Bienvenido</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Cerrar sesion</a></li> -->
+                        </ul>
+                        </li>
+                    </ul>
+                </div>                
             </div>
+        </nav>
+
+        <!-- LISTADO DE PRODUCTOS -->
+        <div id="container-items"  class="container">
+            <div class="row"></div>
         </div>
     </div>
 </body>
