Ajuste de pantallas

--- a/backend/public/component/login/login.html
+++ b/backend/public/component/login/login.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <div class="container">
+        <br>
+        <h1 class="text-center">Iniciar Sesion</h1>
+        <br>
         <form id="login">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -23,11 +26,9 @@
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" name="password">
             </div>
-            <!--<div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>-->
-            <button type="submit" class="btn btn-primary">INICIAR SESIÓN</button>
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <button type="submit" class="btn btn-outline-primary">INICIAR SESIÓN</button>
+            </div>
         </form>
         <br>
         <!-- <div class="alert alert-danger" role="alert"> 
