--- a/backend/public/component/user/add_user.html
+++ b/backend/public/component/user/add_user.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Registrar Usuario</h1>        
+        <br>
+        <h1 class="text-center">Registrar Usuario</h1>
+        <br>
         <form id="newUserForm">
             <div class="mb-3">
                 <label for="name" class="form-label">Nombre:</label>
