Ajuste front login y registro

--- a/backend/public/component/user/add_user.html
+++ b/backend/public/component/user/add_user.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../assts/css/login.css" />
     <script src="../assts/js/user/add_user.js"></script>
+    <title>Login</title>
     <!-- CND BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <br>
-        <h1 class="text-center">Registrar Usuario</h1>
-        <br>
-        <form id="newUserForm">
-            <div class="mb-3">
-                <label for="name" class="form-label">Nombre:</label>
-                <input class="form-control" type="text" id="name" name="name" required>
-            </div>
-            <div class="mb-3">
-                <label for="userName" class="form-label">Nickname:</label>
-                <input class="form-control" type="text" id="userName" name="username" required>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password_user">
-            </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-outline-primary" type="submit">Registrar</button>
-            </div>
-        </form>
+    <div class="wrapper">
+        <!-- <div class="form-wrapper register"> -->
+            <!-- <img src="../imagenes/poridentidad.png" alt=""> -->
+        <h2 class="text-right">BIENVENIDO</h2>
+        <h2 class="text-right2">TIENE TODO🎁</h2>
+        <div class="container">
+            <form id="newUserForm" action="">
+                <h2>REGISTRO</h2>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="nombres"
+                    placeholder="Nombres" name="name" required>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="nickname"></ion-icon></span>
+                    <input type="text"
+                    placeholder="Nickname" name="username" required>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email"
+                    placeholder="Email" name="email" required>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password"
+                    placeholder="Password" name="password_user" required>
+                </div>
+                <div class="forgot-pass">
+                    <a href="#">Forgot Password?</a>
+                </div>
+                <button type="submit">Registrar
+                </button>
+                <div class="sign-link">
+                    <p>Already have an account?
+                        <a href="http://localhost:3000/login/auth" onclick="loginActivado()">Login</a>
+                    </p>
+                </div>
+            </form>
+        </div>
     </div>
-    
 </body>
-</html>
